[gd_scene load_steps=5 format=3 uid="uid://6jc37dg8bi0e"]

[ext_resource type="Script" uid="uid://bohvq5xo06r8o" path="res://Cenas/start.gd" id="1_iboa6"]
[ext_resource type="FontFile" uid="uid://bvfodcihxuqg5" path="res://Material Freeway/PressStart2P-Regular.ttf" id="1_wbnjd"]
[ext_resource type="Texture2D" uid="uid://83jd6bppv66o" path="res://Material Freeway/wallpaperfreeway.png" id="2_iboa6"]
[ext_resource type="AudioStream" uid="uid://b7tj3u3jmnqbx" path="res://Material Freeway/sons/tema.wav" id="4_248d0"]

[node name="Start" type="Node"]
script = ExtResource("1_iboa6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_iboa6")
centered = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Titulo" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -33.5
offset_right = 112.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.286275, 0.741176, 0.87451, 1)
theme_override_colors/font_shadow_color = Color(0.752941, 0.8, 0.309804, 1)
theme_override_fonts/font = ExtResource("1_wbnjd")
theme_override_font_sizes/font_size = 80
text = "DISCO
FREEWAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="HUD"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -190.0
offset_right = 100.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_pressed_color = Color(0.549338, 0.605066, 0.873675, 1)
theme_override_colors/font_hover_color = Color(0.768627, 0.564706, 0.556863, 1)
theme_override_colors/font_color = Color(0.262745, 0.67451, 0.921569, 1)
theme_override_fonts/font = ExtResource("1_wbnjd")
theme_override_font_sizes/font_size = 20
text = "Iniciar"

[node name="AudioTema" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_248d0")
autoplay = true

[node name="TimerCarrosRapidos" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerCarrosLentos" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="HUD/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="TimerCarrosRapidos" to="." method="_on_timer_carros_rapidos_timeout"]
[connection signal="timeout" from="TimerCarrosLentos" to="." method="_on_timer_carros_lentos_timeout"]
